# ingestsvc

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: health.py  ingest.py
app/core/: config.py  database.py
app/models/: log.py
scripts/: shoreman.sh
